--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -689,13 +689,7 @@ div#ventanaPOP {
 				position: absolute;
 				transition: all 350ms ease-in-out;
 			}
-			#escenario{
-				opacity: 0;
-				transition: all 1.5s cubic-bezier(0.64, -0.01, 0.35, 0.99);
-			}
-			section#destacados.soloArte #escenario{
-				opacity: 1;
-			}
+			
 			div#infoDestcadosGlobal {
 				width: 100%;
 				height: 100%;
@@ -733,6 +727,29 @@ div#ventanaPOP {
 					div#destacadoMontajeBox img.montaje.siguiente {
 						transform: rotate(-140deg);
 					}
+				#overDestacados{
+					width: 100%;
+					height: calc(100vw * 0.625);
+					max-height: 100vh;
+					position: absolute;
+					top: 0;
+					left: 0;
+				}
+					#overDestacados > img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+						object-position: calc(50% + 28%) top;
+						position: absolute;
+						transition: all 350ms ease-in-out;
+					}
+					#escenario{
+						opacity: 0;
+						transition: all 1.5s cubic-bezier(0.64, -0.01, 0.35, 0.99);
+					}
+					section#destacados.soloArte #escenario{
+						opacity: 1;
+					}
 			
 			#infoDestcadosGlobal h1{
 				width: calc(100vw - (var(--margenGlobal)) * 2);
@@ -743,7 +760,7 @@ div#ventanaPOP {
 				justify-content: flex-start;
 				align-items: center;
 				font-family: var(--tipografiaEspecial);
-				font-size: clamp(26px, 5vw, 42px);
+				font-size: clamp(18px, 5vw, 42px);
 				font-weight: 900;
 				color: var(--colorPrincipalDark);
 				position: absolute;
@@ -760,6 +777,7 @@ div#ventanaPOP {
 				justify-content: flex-end;
 				gap: 16px;
 				cursor: pointer;
+				z-index: 100;
 			}
 			section#destacados.clearActivo div#destacadosControlTheme{
 				color: var(--colorTexto);
@@ -772,18 +790,6 @@ div#ventanaPOP {
 					opacity: 1;
 					transition: all 250ms ease-in-out;
 				}
-				#clear{
-					opacity: .2;
-				}
-				#dark:hover, #clear:hover{
-					opacity: 1;
-				}
-				section#destacados.clearActivo #dark{
-					opacity: .2;
-				}
-				section#destacados.clearActivo #clear{
-					opacity: 1;
-				}
 					div#destacadosControlTheme .colorTheme {
 						width: 26px;
 						height: 26px;
@@ -794,18 +800,24 @@ div#ventanaPOP {
 					section#destacados.clearActivo div#destacadosControlTheme .colorTheme{
 						border: 1px solid var(--colorTexto);
 					}
-					#dark .colorTheme{
-						background-color: var(--colorTexto);
+					#dark::before {
+						content: "Claro";
+						color: #fff;
+						transition: all 200ms ease-in-out;
 					}
-					#clear .colorTheme{
+					section#destacados.clearActivo #dark::before{
+						content: "Oscuro";
+					}
+					#dark .colorTheme{
 						background-color: var(--colorBackFondo);
+						transition: all 200ms ease-in-out;
 					}
 					#soloArte{
 						cursor: pointer;
 						transition: all 200ms ease-in-out;
 					}
 						#soloArte::before {
-							content: "Solo Arte";
+							content: "Solo";
 							color: #fff;
 							transition: all 200ms ease-in-out;
 						}
@@ -815,8 +827,12 @@ div#ventanaPOP {
 							transition: all 200ms ease-in-out;
 						}
 						section#destacados.clearActivo #soloArte::before,
+						section#destacados.clearActivo #dark::before,
 						section#destacados.clearActivo #soloArte i::before{
 							color: var(--colorTexto);
+						}
+						section#destacados.clearActivo #dark .colorTheme{
+							background-color: var(--colorTexto);
 						}
 						section#destacados.soloArte #soloArte::before{
 							content: "Todo";
@@ -825,6 +841,11 @@ div#ventanaPOP {
 						section#destacados.clearActivo #soloArte:hover i::before{
 							color: var(--colorPrincipal);
 						}
+						#dark .colorTheme:hover,
+						section#destacados.clearActivo #dark .colorTheme:hover{
+							background-color: var(--colorPrincipal);
+						}
+						
 
 			div#destacadosTitulo {
 				width: 32%;
@@ -938,7 +959,7 @@ div#ventanaPOP {
 					div#destacadosInfoBox .descripcion {
 						font-size: 98%;
 						line-height: 1.16;
-						transition: all 700ms ease-in-out;
+						/* transition: all 700ms ease-in-out; */
 						opacity: 1;
 					}
 					
@@ -973,6 +994,7 @@ div#ventanaPOP {
 					gap: 26px;
 					justify-content: center;
 					align-items: flex-start;
+					z-index: 20;
 				}
 					div#destacadosArticulos .articulo {
 						width: auto;
@@ -1112,7 +1134,18 @@ div#ventanaPOP {
 
 	section#destacados {
 		height: calc((100vw * 0.625) * 2);
-		margin-bottom: 48px;
+		margin-bottom: calc(23vw + ((34px * 2) + 48px + 12px));
+	}
+	div#destacadosTitulo{
+		padding: 17px;
+		background-color: #312f2ee1;
+		border-radius: 16px;
+		/* right: calc(var(--marginGlobal) * -1); */
+		width: 33%;
+		text-align: right;
+	}
+	section#destacados.clearActivo div#destacadosTitulo{
+		background-color: #f6f0e3e1;
 	}
 		div#destacadosArticulosGeneral {
 			width: 100vw;
@@ -1124,21 +1157,48 @@ div#ventanaPOP {
 			padding: 34px var(--margenGlobal);
 			margin-bottom: 3vh;
 		}
-			div#destacadosArticulos {
-				padding: 0 40px;
-				width: 100%;
+			div#destacadosArticulos .articulo {
+				flex: 1 1 0;
 			}
-				div#destacadosArticulos .articulo {
-					flex: 1 1 0;
-				}
 			div#destacadosBotones {
 				width: calc(100vw - (var(--margenGlobal) * 2));
 				position: absolute;
 				padding: 0;
 			}
 	
+	div#destacadosInfoGlobal{
+		flex: 0 0 auto;
+		height: min-content;
+		margin: 0;
+	}
+		div#destacadosInfoBox {
+			flex-direction: row-reverse;
+		}
+			div#destacadosInfoBox .costo {
+				position: relative;
+				display: flex;
+			}
+
+	div#destacadosArticulosGeneral {
+		align-items: center;
+		position: relative;
+		margin: 0;
+		top: auto;
+		bottom: auto;
+	}
+		div#destacadosArticulos {
+			width: calc(100% - 80px);
+			display: grid;
+			grid-template-columns: repeat(6, 1fr);
+			gap: 14px;
+		}
+			div#destacadosArticulos .articulo .info{
+				display: none;
+			}
 	
-		
+	section#destacados.soloArte #destacadosArticulosGeneral {
+		display: flex !important;
+	}
 	
 }
 /* ==========================================================================
@@ -1146,19 +1206,20 @@ div#ventanaPOP {
 ========================================================================== */
 @media screen and (orientation:portrait) and (max-width: 760px){
 	section#destacados {
-		margin-bottom: calc(54vw + ((34px * 2) + 48px + 12px));
+		margin-bottom: calc(16vw + ((34px * 2) + 48px + 12px));
 	}
 	#buscarBox {
-		margin-right: 34px;
+		margin-right: 0;
 		position: absolute;
+		right: 33px;
 	}
 	section#navGlobal{
 		position: relative;
 	}
 		#infoDestcadosGlobal h1 {
 			padding: 0;
-			text-align: center;
-			justify-content: center;
+			text-align: left;
+			justify-content: flex-start;
 		}
 
 	
@@ -1170,14 +1231,6 @@ div#ventanaPOP {
 		margin-bottom: -48px;
 	}
 		
-		div#destacadosInfoBox {
-			padding: 16px 22px;
-			flex-direction: column;
-			gap: 6px;
-			align-items: flex-end;
-			justify-content: flex-end;
-			width: 100%;
-		}
 			div#destacadosInfoBox .costo {
 				padding-bottom: 0px;
 				text-align: right;
@@ -1205,13 +1258,9 @@ div#ventanaPOP {
 				background: var(--colorBackColor);
 				margin-bottom: 0px;
 			}
-				div#destacadosArticulos {
-					padding: 0 40px;
-					width: 100%;
-					display: grid;
-					grid-template-columns: repeat(3, 1fr);
-					gap: 14px;
-				}
+			section#destacados.clearActivo div#destacadosArticulosGeneral{
+				background: var(--colorBackFondo);
+			}
 					div#destacadosArticulos .articulo {
 						width: auto;
 						flex: none;
@@ -1228,8 +1277,39 @@ div#ventanaPOP {
 ========================================================================== */
 @media screen and (orientation:portrait) and (max-width: 680px){
 	section#destacados {
-		margin-bottom: calc(56vw + ((34px * 2) + 48px + 12px));
+		margin-bottom: calc(58vw + (34px * 2));
 	}
+	div#destacadosTitulo{
+		width: 32%;
+		right: calc(var(--marginGlobal) * -1);
+		border-bottom-right-radius: 0;
+		border-top-right-radius: 0;
+		margin-bottom: 12px;
+	}
+		div#destacadosTitulo h3 {
+			font-size: 260%;
+		}
+	div#destacadosInfoGlobal {
+		width: 100vw;
+		left: 0;
+		border-radius: 0;
+		margin-bottom: -62px;
+	}
+		div#destacadosInfoBox {
+			padding: 20px 24px 18px;
+		}
+	div#destacadosArticulos {
+		grid-template-columns: repeat(3, 1fr);
+	}
+	div#destacadosControlTheme {
+		gap: 8px;
+		font-size: 86%;
+	}
+		div#destacadosControlTheme .colorTheme {
+			width: 20px;
+			height: 20px;
+		}
+	
 }
 
 /* ==========================================================================
@@ -1237,28 +1317,42 @@ div#ventanaPOP {
 ========================================================================== */
 @media screen and (orientation:portrait) and (max-width: 460px){
 	section#destacados {
-		margin-bottom: calc(64vw + ((34px * 2) + 48px + 12px));
+		margin-bottom: calc(58vw + (34px * 1));;
 	}
+	div#destacadosArticulosGeneral {
+		padding: 18px var(--margenGlobal);
+	}
+	
 }
 
 /* ==========================================================================
 	Estilos para un especto de pie pero en dispositivos pequeños
 ========================================================================== */
-@media screen and (orientation:portrait) and (max-width: 330px){
-	section#destacados {
-		margin-bottom: calc(80vw + ((34px * 2) + 48px + 12px));
-	}
+@media screen and (orientation:portrait) and (max-width: 328px){
+	
 	div#destacadosInfoBox .descripcion {
 		display: none;
 	}
+	div#destacadosTitulo h3 {
+		font-size: 260%;
+	}
+	div#destacadosControlTheme {
+		top: 7%;
+	}
+		.controlTheme::before {
+			color: var(--colorTexto) !important;
+		}
 }
 
 /* ==========================================================================
 	Estilos para un especto de pie pero en dispositivos pequeños
 ========================================================================== */
 @media screen and (orientation:portrait) and (max-width: 280px){
-	section#destacados {
-		margin-bottom: calc(100vw + ((34px * 2) + 48px + 12px));
+	div#destacadosTitulo h3{
+		display: none;
+	}
+	div#destacadosInfoBox .medidasGlobal{
+		display: none;
 	}
 }
 
@@ -1488,63 +1582,6 @@ div#ventanaPOP {
 	div#destacadosArticulos .articulo .info{
 		display: none;
 	}
-	/* div#destacadosInfoGlobal {
-		width: auto;
-		margin-bottom: 10px;
-		max-width: calc(100vw - (var(--margenGlobal)) * 2);
-	} */
-		/* div#destacadosInfoBox {
-			padding: 18px;
-			gap: 10px;
-		}
-			div#destacadosInfoBox .col1 {
-				width: 100%;
-				display: flex;
-				align-items: center;
-			}
-				div#destacadosInfoBox .costo {
-					white-space: nowrap;
-					padding: 4px 14px;
-				}
-				div#destacadosInfoBox .medidasGlobal h4 {
-					margin-bottom: 4px;
-				}
-				div#destacadosInfoBox ul#medidas {
-					width: 100%;
-					display: flex;
-					flex-wrap: wrap;
-					gap: 8px;
-					row-gap: 1px;
-				} */
-
-
-	/* section#destacados {
-		margin-bottom: calc(16vw + (0px + 12px));
-	}
-		div#destacadosArticulosGeneral {
-			width: 100vw;
-			align-items: center;
-			justify-content: center;
-			top: calc(100% + (0px + 12px));
-			left: 0;
-			padding: 20px var(--margenGlobal);
-			background-color: var(--colorBackColor);
-			transition: all 200ms ease-in-out;
-		}
-		section#destacados.clearActivo div#destacadosArticulosGeneral {
-			background-color: var(--colorBackFondo);
-		}
-			div#destacadosArticulos {
-				width: 70%;
-				flex-wrap: nowrap;
-				position: relative;
-				z-index: 20;
-			}
-			div#destacadosBotones {
-				width: calc(100vw - (var(--margenGlobal)) * 2);
-				position: absolute;
-				padding: 0;
-			} */
 }
 /* ==========================================================================
 	Estilos para un especto acostado pero en dispositivos medianos
@@ -1564,7 +1601,7 @@ div#ventanaPOP {
 @media screen and (orientation:landscape) and (max-width: 800px) and (min-aspect-ratio: 23 / 10){
 	div#destacadosInfoGlobal {
 		width: auto;
-		margin-bottom: 24px;
+		margin-bottom: 8px;
 	}
 		div#destacadosInfoBox {
 			gap: 16px;
@@ -1580,6 +1617,9 @@ div#ventanaPOP {
 				}
 				div#destacadosInfoBox .descripcion{
 					display: none;
+				}
+				div#destacadosTitulo h3 {
+					font-size: 280%;
 				}
 				div#destacadosInfoBox .medidasGlobal h4 {
 					margin-bottom: 4px;
@@ -1792,7 +1832,7 @@ div#ventanaPOP {
 		margin-bottom: 15px;
 	}
 		div#destacadosTitulo h3 {
-			font-size: 250%;
+			font-size: 200%;
 			line-height: 1;
 		}
 }
