--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,10 +156,9 @@ img.cuadroGuiaH {
 	height: auto;
 	position: relative;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 0.6rem 12%;
 	bottom: 0px;
 	box-sizing: border-box;
 	background-color: #fff;
@@ -167,14 +166,16 @@ img.cuadroGuiaH {
 	align-self: flex-end;
 }
 	#footerDeveloper .interno{
+		width: calc(100vw - (var(--margenGlobal) * 2));
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
 		color: #45413c;
     	font-weight: 300;
+		padding: 0.6rem;
 	}
-		#footerDeveloper a {
+		#footerDeveloper .interno a {
 			display: flex;
 			justify-content: flex-start;
 			align-items: center;
@@ -182,7 +183,7 @@ img.cuadroGuiaH {
 			color: #90502f;
 			font-weight: 300;
 		}
-			#footerDeveloper img {
+			#footerDeveloper .interno img {
 				width: 48px;
 				height: 48px;
 				object-fit: contain;
@@ -1119,6 +1120,9 @@ section#presentacion {
 			align-items: baseline;
 			column-gap: 24px;
 		}
+		#boxCatgoriasProductos section:last-child {
+			padding-bottom: 4em;
+		}
 			#boxCatgoriasProductos section::before {
 				content: "";
 				width: 100vw;
@@ -1201,7 +1205,7 @@ section#presentacion {
 							transition: all 250ms ease-in-out;
 						}
 						#boxCatgoriasProductos .boxProductos .producto .pAccion a.pBtnVer:hover{
-							color: #fff;s
+							color: #fff;
 						}
 						#boxCatgoriasProductos .boxProductos .producto .pAccion .pPrecio {
 							color: darkorange;
@@ -1223,6 +1227,99 @@ section#presentacion {
 					background-color: var(--colorTercero);
 				}
 
+
+
+
+div#footerGeneral {
+	width: 100vw;
+	padding: 4em var(--margenGlobal);
+	display: flex;
+	background: transparent url(../img/footer/estudio.webp) no-repeat center center;
+	background-size: cover;
+	position: relative;
+	color: #fff;
+	border-top: 14px solid;
+}
+	div#footerGeneral > * {
+		flex: 1 1 50%;
+		position: relative;
+	}
+	div#footerGeneral::before {
+		content: "";
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		background-color: #111;
+		opacity: .86;
+	}
+	#menuFooter ul li{
+		margin: 10px 0;
+	}
+		#menuFooter ul li a{
+			text-decoration: none;
+			color: #ff6b26;
+			transition: all 250ms ease-in-out;
+			cursor: pointer;
+		}
+		#menuFooter ul li a:hover{
+			color: var(--colorPrincipal);
+		}
+	footer h2 {
+		font-family: 'Grape Nuts';
+	}
+	div#footerGeneral .boxInput {
+		margin: 6px 0 32px;
+	}
+	.boxInput.error .inputError {
+		color: #ff0000;
+	}
+	.boxInput.error .iconoStatus i:before {
+		color: crimson;
+	}
+	div#footerGeneral input,
+	div#footerGeneral textarea {
+		height: 42px;
+		border-radius: 0;
+		background-color: transparent !important;
+		box-shadow: none;
+		border: 0px none transparent;
+		border-bottom: 1px solid #fff6;
+		color: #fff;
+		position: relative;
+	}
+	div#footerGeneral textarea {
+		height: auto;
+	}
+	div#footerGeneral .inputEfect .efectoLinea {
+		height: 3px;
+		top: auto;
+		bottom: -1px;
+	}
+	div#footerGeneral input:focus, div#footerGeneral input:active, div#footerGeneral input:target, div#footerGeneral textarea:focus, div#footerGeneral textarea:active, div#footerGeneral textarea:target {
+		background-color: #fff2 !important;
+	}
+	div#footerGeneral input:focus ~ .efectoLinea, div#footerGeneral input:active ~ .efectoLinea, div#footerGeneral input:target ~ .efectoLinea, div#footerGeneral textarea:focus ~ .efectoLinea, div#footerGeneral textarea:active ~ .efectoLinea, div#footerGeneral textarea:target ~ .efectoLinea {
+		background-color: var(--colorTercero);
+		animation: laser 4s ease-in-out infinite;
+	}
+	div#footerGeneral input#btnFormFooter {
+		width: auto;
+		position: relative;
+		left: auto;
+		right: 0px;
+		border: 0px none transparent;
+		margin: 2em 0 0 auto;
+		padding: 8px 14px;
+		background-color: var(--colorPrincipal) !important;
+		border-radius: 8px;
+		transition: all 250ms ease-in-out;
+		cursor: pointer;
+	}
+	div#footerGeneral input#btnFormFooter:hover{
+		background-color: #ff6b26 !important;
+	}
 
 
 
@@ -1285,7 +1382,6 @@ section#presentacion {
 		padding: 17px;
 		background-color: #312f2ee1;
 		border-radius: 16px;
-		/* right: calc(var(--marginGlobal) * -1); */
 		width: 33%;
 		text-align: right;
 	}
@@ -1426,7 +1522,7 @@ section#presentacion {
 	}
 	div#destacadosTitulo{
 		width: 32%;
-		right: calc(var(--marginGlobal) * -1);
+		right: calc(var(--margenGlobal) * -1);
 		border-bottom-right-radius: 0;
 		border-top-right-radius: 0;
 		margin-bottom: 12px;
@@ -2000,7 +2096,12 @@ section#presentacion {
 	Media Queries
 ========================================================================== */
 @media only screen and (max-width: 480px) {
-	
+	div#footerGeneral {
+		 flex-direction: column; 
+	}
+		form#footerForm {
+			margin-top: 2em;
+		}
 }
 
 
