login user credentials

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -714,6 +714,53 @@ div#ventanaPOP {
 				justify-content: flex-end;
 				align-items: center;
 			}
+				div#loginBox {
+					width: 100%;
+					height: 100%;
+					position: absolute;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: flex-end;
+					padding-right: var(--margenGlobal);
+					background-color: var(--colorBackColor);
+					border-radius: 38px 0px 0px 38px;
+					z-index: 10;
+					left: 100%;
+					transition: all 250ms ease-in-out;
+				}
+				div#loginBox.activo{
+					left: 0%;
+				}
+					div#tituloFormLogin {
+						font-size: clamp(20px, 3vw, 38px);
+						color: #fff;
+						margin-bottom: 2rem;
+					}
+					form#loginForm {
+						width: calc(100% - var(--margenGlobal));
+						max-width: 400px;
+					}
+						form#loginForm .boxInput {
+							margin-bottom: 30px;
+						}
+							form#loginForm .boxInput.error input, form#loginForm .boxInput.error textarea {
+								background-color: #fbb4aa;
+							}
+							form#loginForm .iconoStatus i{
+								position: absolute;
+							}
+							input#btnLogin {
+								width: auto;
+								margin: 2.6em 0 0 auto;
+								background-color: var(--colorTercero);
+								cursor: pointer;
+								transition: all 200ms ease-in-out;
+							}
+							form#loginForm input#btnLogin:hover{
+								background-color: #5cff10;
+							}
+
 				ul#menuBox {
 					width: calc(100% - (var(--margenGlobal) * 2));
 					max-height: calc(100% - (var(--margenGlobal) * 2));
